--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@diamondlightsource/sci-react-ui": "^0.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@jsonforms/core": "^3.6.0",
+    "@jsonforms/material-renderers": "^3.6.0",
+    "@jsonforms/react": "^3.6.0",
     "@mui/material": "^6.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
